Fix folder name and delete instruct files

--- a/Lectures/Lecture03.ipynb
+++ b/Lectures/Lecture03.ipynb
@@ -767,46 +767,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Boosting – метод, в котором модели обучаются последовательно, каждая следующая модель сосредотачивается на ошибках предыдущих.\n",
+    "Бустинг (Boosting) — это семейство ансамблевых методов, в которых базовые модели (`weak learners`) обучаются **последовательно**. Основная идея в том, что каждая следующая модель стремится скорректировать ошибки предыдущих. В результате достигается высокое качество за счёт комбинирования многих слабых моделей в один сильный ансамбль."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### AdaBoost\n",
     "\n",
-    "**Основная идея:**\n",
-    "1. Изначально каждому объекту присваивается вес:  \n",
-    "    $$\n",
-    "    w_i^{(1)} = \\frac{1}{N}, \\quad i=1,\\dots,N.\n",
-    "    $$\n",
-    "2. На каждом шаге $ m $ обучается слабый классификатор $ h_m(x) $ согласно текущей взвешенной выборке. Ошибка классификации определяется как:\n",
-    "    $$\n",
-    "    \\epsilon_m = \\sum_{i=1}^{N} w_i^{(m)} \\mathbb{I}\\left( y_i \\neq h_m(x_i) \\right).\n",
-    "    $$\n",
-    "3. Вычисляется вес модели:\n",
-    "    $$\n",
-    "    \\gamma_m = \\ln\\frac{1-\\epsilon_m}{\\epsilon_m}.\n",
-    "    $$\n",
-    "4. Обновление весов объектов производится по формуле:\n",
-    "    $$\n",
-    "    w_i^{(m+1)} = w_i^{(m)} \\exp\\left( \\gamma_m \\mathbb{I}\\left( y_i \\neq h_m(x_i) \\right) \\right),\n",
-    "    $$\n",
-    "    с последующей нормировкой так, чтобы $\\sum_i w_i^{(m+1)} = 1$.\n",
+    "**AdaBoost** — один из первых бустинговых алгоритмов для классификации. Основная идея — обучать последовательность слабых классификаторов $h_m$, каждый из которых уделяет больше внимания объектам, неправильно классифицированным предыдущими моделями.\n",
     "\n",
-    "**Особенность:** Снижает смещение модели, позволяет добиться высокой точности за счет концентрации на сложных для классификации объектах.\n",
+    "1. **Инициализация весов объектов**\n",
     "\n",
-    "**Пример:** \n",
-    "**Gradient Boosting**, где последовательно обучаются модели для минимизации остаточной ошибки с использованием градиентного спуска.\n",
-    "Каждое новое базовое дерево обучается на остатках (или псевдопроизводных) функции потерь предыдущего ансамбля.\n",
+    "   $$\n",
+    "   w_i^{(1)} = \\frac{1}{N}, \\quad i=1,\\dots,N.\n",
+    "   $$\n",
     "\n",
-    "Итоговая модель представлена как:\n",
-    "$$\n",
-    "f(x) = \\sum_{m=1}^{M} \\gamma_m h_m(x).\n",
-    "$$\n",
-    "На шаге $ m $ новая модель $ h_m(x) $ решает задачу аппроксимации антиградиента:\n",
-    "$$\n",
-    "r_i^{(m)} = -\\left.\\frac{\\partial L(y_i, f(x_i))}{\\partial f(x_i)}\\right|_{f(x) = f_{m-1}(x)},\n",
-    "$$\n",
-    "а коэффициент $ \\gamma_m $ выбирается для минимизации:\n",
-    "$$\n",
-    "\\gamma_m = \\arg\\min_{\\gamma} \\sum_{i=1}^{N} L\\left( y_i, f_{m-1}(x_i) + \\gamma\\, h_m(x_i) \\right).\n",
-    "$$\n",
-    "Здесь $ L(y, f(x)) $ – функция потерь, например, логарифмическая потеря для классификации или квадратичная ошибка для регрессии."
+    "2. **Обучение $m$-го слабого классификатора**\n",
+    "   $h_m: \\mathcal X \\to \\{ -1, +1\\}$ обучается на выборке с весами $w_i^{(m)}$.\n",
+    "\n",
+    "3. **Вычисление ошибки модели**\n",
+    "\n",
+    "   $$\n",
+    "   \\epsilon_m = \\sum_{i=1}^{N} w_i^{(m)} \\; \\mathbb{I}\\bigl(y_i \\neq h_m(x_i)\\bigr),\n",
+    "   $$\n",
+    "\n",
+    "   где $y_i \\in \\{-1, +1\\}$.\n",
+    "\n",
+    "4. **Вес модели в ансамбле**\n",
+    "\n",
+    "   $$\n",
+    "   \\alpha_m = \\frac{1}{2} \\ln\\frac{1 - \\epsilon_m}{\\epsilon_m}.\n",
+    "   $$\n",
+    "\n",
+    "5. **Обновление весов объектов**\n",
+    "\n",
+    "   $$\n",
+    "   w_i^{(m+1)} = \\frac{w_i^{(m)} \\exp\\bigl(-\\alpha_m y_i h_m(x_i)\\bigr)}{Z_m},\n",
+    "   $$\n",
+    "\n",
+    "   где нормировочный множитель $Z_m$ обеспечивает $\\sum_i w_i^{(m+1)} = 1$.\n",
+    "\n",
+    "6. **Финальное решение**\n",
+    "\n",
+    "   $$\n",
+    "   F(x) = \\operatorname{sign}\\bigl(\\sum_{m=1}^M \\alpha_m h_m(x)\\bigr).\n",
+    "   $$\n",
+    "\n",
+    "- Тенденция к переобучению при большом числе итераций и слабых шумоустойчивых базовых моделях.\n",
+    "- Чувствительность к выбросам из‑за экспоненциального обновления весов."
    ]
   },
   {
@@ -814,6 +824,146 @@
    "metadata": {},
    "source": [
     "<img src=\"https://media.geeksforgeeks.org/wp-content/uploads/20210707140911/Boosting.png\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Gradient Boosting\n",
+    "\n",
+    "**Gradient Boosting** - обобщает идею бустинга как решение задачи градиентного спуска в функциональном пространстве: ансамбль строится итеративно, минимизируя выбранную функцию потерь $L(y, F(x))$.\n",
+    "\n",
+    "1. **Инициализация ансамбля**\n",
+    "\n",
+    "   $$\n",
+    "   F_0(x) = \\arg\\min_{\\gamma} \\sum_{i=1}^N L\\bigl(y_i, \\gamma\\bigr).\n",
+    "   $$\n",
+    "\n",
+    "2. **Итерации $m=1 \\dots M$**:\n",
+    "\n",
+    "   1. **Вычисление псевдо-остатков**\n",
+    "\n",
+    "      $$\n",
+    "      r_i^{(m)} = -\\left.\\frac{\\partial L(y_i, F(x_i))}{\\partial F(x_i)}\\right|_{F=F_{m-1}}.\n",
+    "      $$\n",
+    "\n",
+    "      Если используется квадратичная ошибка (MSE): $L = \\tfrac12 (y - F)^2$ $\\implies r_i^{(m)} = y_i - F_{m-1}(x_i)$.\n",
+    "        \n",
+    "   2. **Обучение базового регрессора** $h_m(x)$ на данных $(x_i, r_i^{(m)})$.\n",
+    "   3. **Поиск шагового коэффициента**\n",
+    "\n",
+    "      $$\n",
+    "      \\gamma_m = \\arg\\min_{\\gamma} \\sum_{i=1}^N L\\bigl(y_i, F_{m-1}(x_i) + \\gamma\\,h_m(x_i)\\bigr).\n",
+    "      $$\n",
+    "   4. **Обновление ансамбля**\n",
+    "\n",
+    "      $$\n",
+    "      F_m(x) = F_{m-1}(x) + \\eta\\,\\gamma_m\\,h_m(x),\n",
+    "      $$\n",
+    "\n",
+    "      где $\\eta\\in (0,1]$ — темп обучения (learning rate).\n",
+    "\n",
+    "3. **Финальное предсказание**\n",
+    "\n",
+    "   * Для задач регрессии: $\\hat y = F_M(x)$.\n",
+    "   * Для задач классификации: $\\hat y = \\operatorname{sign}\\bigl(F_M(x)\\bigr)$ или через сигмоиду/softmax для вероятностных оценок.\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Регуляризация и гиперпараметры**\n",
+    "\n",
+    "Для предотвращения переобучения и повышения устойчивости применяются:\n",
+    "\n",
+    "- **Темп обучения** $\\eta$: маленькие значения (например, 0.01–0.1) замедляют обучение.\n",
+    "- **Глубина деревьев**: ограничение максимальной глубины или числа листьев.\n",
+    "- **Количество итераций** $M$: число деревьев.\n",
+    "- **Подвыборка (subsampling)**: случайная выборка $\\alpha N$ объектов без замены при обучении каждого дерева.\n",
+    "- **Регуляризация значений листьев**: L1/L2-регуляризация на выходные значения (например, в XGBoost)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Современные реализации** градиентного бустинга значительно расширяют базовую идею функционального градиентного спуска, предлагая улучшения по скорости обучения, устойчивости к переобучению и работе с категориальными данными."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### XGBoost (Extreme Gradient Boosting)\n",
+    "\n",
+    "XGBoost — одна из наиболее популярных реализаций градиентного бустинга, отличающаяся высокой скоростью и качеством. Основные особенности:\n",
+    "\n",
+    "* **Второй порядок оптимизации**: в отличие от классического бустинга, XGBoost использует не только градиенты, но и гессианы (вторые производные функции потерь), что позволяет более точно выбирать шаги обновления.\n",
+    "* **Регуляризация**: в функцию потерь добавляются L1- и L2-регуляризаторы, что повышает устойчивость к переобучению:\n",
+    "\n",
+    "  $$\n",
+    "  \\mathcal{L}^{(t)} = \\sum_{i=1}^N L(y_i, \\hat{y}_i^{(t)}) + \\sum_{k=1}^{t} \\Omega(h_k), \\quad \\Omega(h) = \\gamma T + \\frac{1}{2}\\lambda \\sum_{j=1}^{T} w_j^2\n",
+    "  $$\n",
+    "\n",
+    "  где $T$ — число листьев, $w_j$ — вес узла.\n",
+    "* **Пропущенные значения**: встроенные механизмы для автоматического определения направления разветвления при отсутствующих значениях.\n",
+    "* **Параллелизм**: обучение и построение гистограмм для разбиения признаков выполняется параллельно.\n",
+    "\n",
+    "XGBoost строит деревья по принципу: «Строим дерево последовательно по уровням до достижения максимальной глубины». Отдельного ограничения на количество вершин нет, так как оно естественным образом получается из ограничения на глубину дерева. В XGBoost деревья «стремятся» быть симметричными по глубине, и в идеале получается полное бинарное дерево, если это не противоречит другим ограничениям (например, ограничению на минимальное количество объектов в листе). Такие деревья обычно являются более устойчивыми к переобучению."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://yastatic.net/s3/education-portal/media/tree_xgboost_e0caf19935_5029e855a6.webp\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### LightGBM\n",
+    "\n",
+    "LightGBM — библиотека от Microsoft, ориентированная на масштабируемость и скорость при сохранении качества модели:\n",
+    "\n",
+    "* **Leaf-wise рост деревьев**: вместо уровня (level-wise) выбирается лист с наибольшим вкладом в уменьшение функции потерь, что ускоряет сходимость, но может привести к переобучению.\n",
+    "* **Гистограммное разбиение**: признаки бинируются (дискретизируются) в фиксированное число корзин (bins), что сокращает потребление памяти и ускоряет поиск разбиений.\n",
+    "* **Градиентное сэмплирование (GOSS)**: важные (большие) по градиенту примеры используются всегда, остальные — с вероятностью, что сохраняет информативность и ускоряет обучение.\n",
+    "* **Экстремально эффективен на больших и разреженных данных**.\n",
+    "\n",
+    "LightGBM строит деревья по принципу: «На каждом шаге делим вершину с наилучшим скором», а основным критерием остановки выступает максимально допустимое количество вершин в дереве. Это приводит к тому, что деревья получаются несимметричными, то есть поддеревья могут иметь разную глубину — например, левое поддерево может иметь глубину 2, а правое может разрастись до глубины 15."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://yastatic.net/s3/education-portal/media/tree_lightgbm_b27000abd5_dcdf18005a.webp\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### CatBoost\n",
+    "\n",
+    "CatBoost — библиотека от Яндекса, разработанная специально для эффективной обработки категориальных признаков:\n",
+    "\n",
+    "* **Порядковый бустинг** (ordered boosting): устранение таргет-шифта за счёт особой последовательности построения модели, при которой каждый базовый алгоритм обучается только на части данных, не содержащей целевой переменной для текущего объекта.\n",
+    "* **Обработка категориальных признаков**: автоматически применяет методы target encoding и счётчиков с регуляризацией, устраняя необходимость в предварительной подготовке.\n",
+    "* **Симметричные деревья**: все разветвления принимаются одновременно на всех уровнях, что ускоряет предсказание и делает модель более устойчивой.\n",
+    "* **Поддержка мультиклассовой классификации, нерегулярных задач и использования CPU/GPU.**\n",
+    "\n",
+    "CatBoost строит деревья по принципу: «Все вершины одного уровня имеют одинаковый предикат». Одинаковые сплиты во всех вершинах одного уровня позволяют избавиться от ветвлений (конструкций if-else) в коде инференса модели с помощью битовых операций и получить более эффективный код, который в разы ускоряет применение модели, в особенности в случае применения на батчах.\n",
+    "\n",
+    "Кроме этого, такое ограничение на форму дерева выступает в качестве сильной регуляризации, что делает модель более устойчивой к переобучению. Основной критерий остановки, как и в случае XGBoost, — ограничение на глубину дерева. Однако, в отличие от XGBoost, в CatBoost всегда создаются полные бинарные деревья, несмотря на то, что в некоторые поддеревья может не попасть ни одного объекта из обучающей выборки."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://yastatic.net/s3/education-portal/media/tree_catboost_d501cbfe52_d44e880b4e.webp\" alt=\"Описание изображения\" width=\"600\">"
    ]
   },
   {
